@@ -3,6 +3,7 @@
     <words>
       <w>alignleft</w>
       <w>alignright</w>
+      <w>antispambot</w>
       <w>biryukov</w>
       <w>bloginfo</w>
       <w>cais</w>
